changes to dynamic background to stop squashing when resizing the window

--- a/src/App.css
+++ b/src/App.css
@@ -9,29 +9,61 @@
 }
 
 /*My CSS*/
+
+/*Background*/
 .page {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  background-size: cover;
+  background-position: right;
 }
 
-.background {
-  position: fixed;
-  width: 100vw;
-  height: 140vh;
-  z-index: -5;
+/*Dynamic backgrounds*/
+.cloudy {
+  background-image: url("./background-photos/cloudy.jpg");
+}
+.rainy {
+  background-image: url("./background-photos/rainy.jpg");
+}
+.snowy {
+  background-image: url("./background-photos/snowy.jpg");
+}
+.stormy {
+  background-image: url("./background-photos/stormy.jpg");
+}
+.sunny {
+  background-image: url("./background-photos/sunny.jpg");
 }
 
 .title {
   font-family: title-font;
-  font-size: 6.5vw;
+  font-size: 10vw;
+  text-align: center;
+  color: white;
+  text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000,
+    -2px -2px 0 #000;
 }
 
 .search {
   display: flex;
   flex-direction: row;
   justify-items: center;
+}
+
+.searchbar {
+  padding: 7px;
+  margin: 3px;
+  border: 2px black solid;
+  border-radius: 60px;
+}
+.searchbutton {
+  padding: 7px;
+  margin: 3px;
+  border: 2px black solid;
+  border-radius: 60px;
 }
 
 .results-section {
@@ -50,7 +82,7 @@
 }
 
 .city-selection {
-  font-size: 4.5vw;
+  font-size: 7.5vw;
 }
 
 .rule {
@@ -66,6 +98,17 @@
   align-items: center;
 }
 
+.temperature {
+  font-size: 5vw;
+}
+
 .weather-icon {
   margin: 3vh 10vw;
+}
+
+/*Loading screen*/
+.loading-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
